Left state with chemister here :feet:

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-
-# Created by https://www.gitignore.io/api/python
-# Edit at https://www.gitignore.io/?templates=python
-
-### Python ###
+.idea/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
