--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Click==7.0
 h5py==2.7.1
 Keras==2.1.5
 numpy==1.16.4
-pandas==0.22.0
+pandas==0.24.2
 protobuf==3.8.0
 python-dateutil==2.8.0
 pytz==2019.1
@@ -12,6 +12,7 @@ six==1.12.0
 tensorflow==1.1.0
 Werkzeug==0.15.4
 terminaltables==3.1.0
+PyQt5==5.12.2
 matplotlib==3.1.0
 pytest==4.6.3
 ipdb==0.12
